Fixed documentation; addded bat script